--- a/1. Responsive  Ecomerce Page - HTML,CSS,JS/style.css
+++ b/1. Responsive  Ecomerce Page - HTML,CSS,JS/style.css
@@ -4,6 +4,18 @@
     padding: 0;
 }
 
+:root {
+    --main-color: rgb(255, 162, 12);
+    --text-color: #000000;
+    --background-color: #bff1ec;
+    --white: #ffffff;
+    --dark: #696868;
+}
+
+html {
+    font-size: 18px;
+}
+
 body {
     min-height: 100vh;
     background-image: url(images/g15.svg);
@@ -16,6 +28,10 @@ body {
 nav {
     background-color: white;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
+    top: 0;
+    position: fixed;
+    z-index: 102;
+    width: 100%;
 }
 
 nav ul {
@@ -40,14 +56,14 @@ nav a {
 }
 
 nav a:hover {
-    background-color: #f0f0f0;
+    background-color: var(--main-color);
 }
 
 nav li:first-child {
     margin-right: auto;
 }
 
-.sidebar {
+.navbar {
     position: fixed;
     top: 0;
     right: 0;
@@ -64,44 +80,242 @@ nav li:first-child {
     justify-content: flex-start;
 }
 
-.sidebar li {
+.navbar li {
     width: 100%;
 }
 
-.sidebar a {
+.navbar a {
     width: 100%;
 }
 
-/* later */
 .menu-button {
     display: none;
 }
+
+
 
 @media (max-width: 680px) {
     .hideOnMobile {
         display: none;
     }
 
-/* later */
 .menu-button {
     display: block;
 }
 }
 
 @media (max-width: 480px) {
-    .sidebar {
+    .navbar {
         width: 100%;
     }
 }
 
-.container {
-    width: 95%;
+/* login form */
+.form-container {
+    width: 50%;
     margin: 0 auto;
+}
+
+.login-container {
+    padding: 1.5em;
+}
+
+form {
+    border: 2px solid var(--background-color);
+    background-color: var(--background-color);
+}
+
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 1em 1.1em;
+    margin: .5em 0;
+    display: inline-block;
+    border: 1px splid #c1c1c1;
+    box-sizing: border-box;
+}
+
+form button {
+    background-color: var(--main-color);
+    padding: 1em 1.5em;
+    border: none;
+    cursor: pointer;
+    border: none;
+    width: 100%;
+}
+
+form button:hover {
+    opacity: 0.8;
+}
+
+.cancelbtn {
+    width: auto;
+    padding: .8em 1em;
+    background-color: #f44339;
+}
+
+.img {
+    text-align: center;
+    margin-top: 1.5em;
+}
+
+img.avatar {
+    border-radius: 50%;
+}
+
+span.password {
+    float: right;
+    padding-top: 1em;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1001;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: #000;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+   background-color: #f1f1f1;
+   position: relative; 
+}
+
+.close {
+    position: absolute;
+    right: 1em;
+    color: #000;
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #f44339;
+    cursor: pointer;
+}
+
+/* zoom animation */
+.animate {
+    animation: animatezoom 0.6s;
+}
+
+@keyframes animatezoom {
+    from { transform: scale(0);}
+    to {
+        transform: scale(1);
+    }
+}
+
+/* break point */
+
+@media  screen and (max-width: 700px) {
+    span.password {
+        display: block;
+        float: none;
+    }
+
+    .cancelbtn {
+        width: 100%;
+    }
+
+    .form-container {
+        width: 100%;
+    }
+}
+
+
+
+
+/* Side bar */
+
+.toggle-sidebar {
+    display: none;
+}
+
+/* .toggle-button {
+    display: none;
+} */
+
+.side-bar {
+    width: 18%;
+    background-color: var(--main-color);
+    position: fixed;
+    height: 100vh;
+}
+
+/* .side-bar .close-bar {
+    font-size: 2rem;
+    margin: 0;
+    padding: 0 .5em;
+   float: right;
+}
+
+.side-bar .close-bar:hover,
+.side-bar .close-bar:focus  {
+    background-color: red;
+    color: black;
+    cursor: pointer;
+} */
+
+
+.side-bar a {
+    border-bottom: 2px solid var(--white);
+    padding: .5em;
+    text-decoration: none;
+    color: var(--text-color);
+    font-size: 1.1rem;
+    display: block;
+}
+
+.side-bar a:hover {
+    background-color: var(--white);
+}
+
+.side-bar.show {
+    display: block;
+    z-index: 1000;
+    position: sticky;
+    top: 4em;
+}
+
+
+@media (max-width: 700px) {
+    .toggle-sidebar {
+        margin-top: 2.5em;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .toggle-button {
+        display: flex;
+        position: sticky;
+        top: 2em;
+    }
+
+    .side-bar {
+        position: absolute;
+        display: none;
+        height: fit-content;
+        width: 100%;
+    }
+}
+
+
+/* page content*/
+.container {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     align-items: center;
     background-color: #d8f9f8;
+    margin-left: 18.5%; 
+    margin-top: 2.5em;
 }
 
 .card {
@@ -125,8 +339,6 @@ nav li:first-child {
 .image img {
     max-width: 100%;
     max-height: 100%;
-    
-
 }
 
 .card-text {
@@ -134,15 +346,48 @@ nav li:first-child {
     background-color: #c9d1d1;
 }
 
-@media (max-width: 680px) {
+.card-btn {
+    display: flex;
+    justify-content: space-around;
+}
+
+.card button {
+    color: black;
+    background-color: var(--main-color);
+    padding: .5em 1.5em;
+    border: none;
+    cursor: pointer;
+    border: none;
+}
+
+.card button:hover {
+    opacity: 0.8;
+}
+
+@media (max-width: 1000px) {
     .card {
-        width: 44%;
+        width: 32%;
+        margin: .5em auto 0 auto;
+    }
+}
+@media (max-width: 780px) {
+    .card {
+        width: 49%;
+    }
+}
+@media (max-width: 700px) {
+    .container {
+        margin-left: 0;
+        padding: .5em;
+        margin-top: 0;
     }
 }
 
-@media (max-width: 400px) {
+
+
+@media (max-width: 500px) {
     .card {
-        width: 90%;
+        width: 98%;
         margin: .5em auto 0 auto;
         font-size: small;
     }
@@ -157,4 +402,31 @@ nav li:first-child {
     justify-content: center;
     align-items: center;
     margin-top: 1em;
+    z-index: 999;
+}
+
+.foot {
+    justify-content: space-between;
+    align-items: center;
+    position: sticky;
+    bottom: 0;
+    background-color: var(--white);
+    display: none;
+    text-align: center;
+}
+
+.foot a {
+    width: 100%;
+    padding: .2em 0;
+    font-size: 1.2rem;
+}
+
+.foot a:hover {
+    background-color: var(--main-color);
+}
+
+@media (max-width: 700px) {
+    .foot {
+        display: flex;
+    }
 }
