--- a/6. Django Ecommerce Website/ecommerce_website/store/templates/sidebar.html
+++ b/6. Django Ecommerce Website/ecommerce_website/store/templates/sidebar.html
@@ -1,1 +1,13 @@
-<h1>sidebar</h1>
+<div class="toggle-sidebar">
+    <h1 class="toggle-button">&#8801</h1>
+    <span>Get Amazing offers</span>
+</div>
+
+<div class="side-bar">
+    <!-- <p class="close-bar" id="close-bar">&times</p> -->
+    <a href="#">All products</a>
+    <a href="#">Product category</a>
+    <a href="#">On Sale</a>
+    <a href="#">Best offers</a>
+    <a href="#">New Arrivals</a>
+</div>
