--- a/6. Django Ecommerce Website/ecommerce_website/store/templates/index.html
+++ b/6. Django Ecommerce Website/ecommerce_website/store/templates/index.html
@@ -7,74 +7,18 @@
     
 
 {% block content %}
-    <!-- Header -->
-        <nav>
-            <ul class="navbar">
-                <li class="remove-button" onclick="hideNavbar()"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 -960 960 960" width="26"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
-                <li class="hideOnMobile"><a href="#">Home</a></li>
-                <li><a href="#">Products</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#" id="login-form-mobile" class="login-form-btn">Login</a></li>
-                <li><a href="#">Account</a></li>
-            </ul>
-            <ul>
-                <li><a href="#">SQcodes</a></li>
-                <li class="hideOnMobile"><a href="#">Home</a></li>
-                <li class="hideOnMobile"><a href="#">Products</a></li>
-                <li class="hideOnMobile"><a href="#">About</a></li>
-                <li class="hideOnMobile"><a href="#" id="login-form" class="login-form-btn">Login</a></li>
-                <li class="hideOnMobile"><a href="#">Account</a></li>
-                <li class="cart"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M280-80q-33 0-56.5-23.5T200-160q0-33 23.5-56.5T280-240q33 0 56.5 23.5T360-160q0 33-23.5 56.5T280-80Zm400 0q-33 0-56.5-23.5T600-160q0-33 23.5-56.5T680-240q33 0 56.5 23.5T760-160q0 33-23.5 56.5T680-80ZM246-720l96 200h280l110-200H246Zm-38-80h590q23 0 35 20.5t1 41.5L692-482q-11 20-29.5 31T622-440H324l-44 80h480v80H280q-45 0-68-39.5t-2-78.5l54-98-144-304H40v-80h130l38 80Zm134 280h280-280Z"/></svg><span> 0 </span></a></li>
-                <li class="menu-button" onclick="showNavbar()"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 -960 960 960" width="26"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
-            </ul>
-        </nav>
-
-    <!-- login form -->
-<div id="modal" class="modal">
-        <div class="form-container modal-content animate">
-            <form action="" method="post">
-                <div class="img">
-                    <span id="close" class="close">&times;</span>
-                    <img src="/static/images/avatar.png" alt="avatar" class="avatar" width="20%"> 
-                </div>
-                <div class="login-container">
-                    <label for="userName">Username</label>
-                    <input type="text" placeholder="Enter Username" name="userName" id="userName" autocomplete="username" required>
-
-                    <label for="password">Password</label>
-                    <input type="password" placeholder="Enter Password" name="password" id="password" required>
-
-                    <button type="submit">Login</button>
-                    <label>  
-                        <input type="checkbox" checked="checked" name="remember">Remember me
-                    </label>
-                </div>
-                <div class="login-container">
-                    <button type="button" class="cancelbtn" id="cancelbtn">Cancel</button>
-                    <span class="password">Forgot <a href="#">password?</a></span>
-                </div>
-            </form>
-        </div>
-    </div>
-   
-    <div class="toggle-sidebar">
-    <h1 class="toggle-button">&#8801</h1>
-    <span>Get Amazing offers</span>
-    </div>
-
-    <div class="side-bar">
-        <!-- <p class="close-bar" id="close-bar">&times</p> -->
-        <a href="#">All products</a>
-        <a href="#">Product category</a>
-        <a href="#">On Sale</a>
-        <a href="#">Best offers</a>
-        <a href="#">New Arrivals</a>
-    </div>
-
-    <div class="body-container">
-
+ 
         <header>
             <div class="header">
+
+                {% if messages %}
+                    
+                    {% for message in messages %}
+                        <h5>{{ message }}</h5>
+                    {% endfor %}
+                        
+                {% endif %}
+
                 <h1>Bella Online Shop</h1>
             </div>
         </header>
@@ -219,7 +163,6 @@
                 </div>
             </div>
         </div>
-    </div>
     <!-- footer -->
     <footer>
         <div class="footer">
