--- a/7. Responsive Navigation Bar - HTML, CSS, JS- 002/styles.css
+++ b/7. Responsive Navigation Bar - HTML, CSS, JS- 002/styles.css
@@ -4,6 +4,14 @@
   box-sizing: border-box;
 }
 
+body {
+  background-image: url(g15.svg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+}
+
 html {
   font-size: 16px;
 }
