--- a/8. Responsive Fixed Navigation Bar - HTML, CSS, JS/styles.css
+++ b/8. Responsive Fixed Navigation Bar - HTML, CSS, JS/styles.css
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-  background-image: url(images/g15.svg);
+  background-image: url(g15.svg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
