--- a/8. Responsive Fixed Navigation Bar - HTML, CSS, JS/styles.css
+++ b/8. Responsive Fixed Navigation Bar - HTML, CSS, JS/styles.css
@@ -60,6 +60,17 @@ a {
 
 .cart {
   padding: .6em 2em;
+  position: relative;
+}
+
+.cart .cart-count {
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  padding: 2px 6px;
+  position: absolute;
+  top: 5px;
+  right: 1rem;
 }
 
 .navbar-mobile .hide {
@@ -113,6 +124,20 @@ a {
 
   .navbar-mobile .hide {
     display: flex;
+  }
+
+  .cart-mobile {
+    position: relative;
+  }
+  
+  .cart-mobile .cart-count {
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    padding: 1px 4px;
+    position: absolute;
+    top: 5px;
+    right: 5px;
   }
 }
 
