--- a/10. Responsive Ecommerce Website UI- HTML, CSS, JS/styles.css
+++ b/10. Responsive Ecommerce Website UI- HTML, CSS, JS/styles.css
@@ -39,6 +39,7 @@ a {
   left: 0;
   right: 0;
   width: 100%;
+  z-index: 100;
 }
 
 .navbar a {
@@ -369,6 +370,7 @@ span.password {
   background-color: white;
   margin-bottom: 1em;
   box-shadow: 0 2px 2px rgba(0,0,0,0.2);
+  border-radius: 5px;
 }
 
 .product-image {
@@ -377,12 +379,14 @@ span.password {
 
 .product-image img{
   max-width: 100%;
-  max-height: 200px;
+  max-height: 250px;
+  border-radius: 5px 5px 0 0;
 }
 
 .card-text {
   background-color: rgb(169, 179, 179);
   padding: .5em;
+  border-radius: 0 0 5px 5px;
 }
 
 .card-btn {
@@ -421,8 +425,8 @@ span.password {
   right: 0;
   background-color: red;
   color: white; 
-  padding: 0.5em;
-  border-radius: 0 0 0 5px; 
+  padding: 0.4em;
+  border-radius: 0 5px 0 10px;
 }
 
 .new-product {
