--- a/10. Responsive Ecommerce Website UI- HTML, CSS, JS/styles.css
+++ b/10. Responsive Ecommerce Website UI- HTML, CSS, JS/styles.css
@@ -379,7 +379,7 @@ span.password {
 
 .product-image img{
   max-width: 100%;
-  max-height: 250px;
+  max-height: 200px;
   border-radius: 5px 5px 0 0;
 }
 
@@ -387,6 +387,10 @@ span.password {
   background-color: rgb(169, 179, 179);
   padding: .5em;
   border-radius: 0 0 5px 5px;
+}
+
+.card-text p {
+  padding: .5em;
 }
 
 .card-btn {
