new file:   10. Responsive Ecommerce Website UI- HTML, CSS, JS/images/star_rate_FILL0_wght400_GRAD0_opsz24.svg new file:   10. Responsive Ecommerce Website UI- HTML, CSS, JS/images/star_rate_half_FILL0_wght400_GRAD0_opsz24.svg modified:   10. Responsive Ecommerce Website UI- HTML, CSS, JS/index.html modified:   10. Responsive Ecommerce Website UI- HTML, CSS, JS/styles.css

--- a/10. Responsive Ecommerce Website UI- HTML, CSS, JS/styles.css
+++ b/10. Responsive Ecommerce Website UI- HTML, CSS, JS/styles.css
@@ -391,12 +391,19 @@ span.password {
   border-radius: 0 0 5px 5px;
 }
 
-.card-text p {
+.card-text p strong {
   padding: .5em;
 }
 
 .card-text p strike {
   color: red;
+}
+
+.star {
+  color: rgb(255, 128, 0);
+  padding: 0;
+  margin: 0;
+  font-size: 1.6rem;
 }
 
 .card-btn {
