modified:   11. Django Ecommerce Website/ecommerce_website/db.sqlite3 	modified:   11. Django Ecommerce Website/ecommerce_website/ecommerce_website/__pycache__/settings.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/ecommerce_website/__pycache__/urls.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/ecommerce_website/settings.py 	new file:   11. Django Ecommerce Website/ecommerce_website/media/uploads/products/childrens-shoes-3057510_1280.jpg 	new file:   11. Django Ecommerce Website/ecommerce_website/media/uploads/products/footwear-5408643_1280.jpg 	modified:   11. Django Ecommerce Website/ecommerce_website/static/css/main.css 	modified:   11. Django Ecommerce Website/ecommerce_website/static/css/product.css 	new file:   11. Django Ecommerce Website/ecommerce_website/static/images/account_circle_FILL0_wght400_GRAD0_opsz24.svg 	modified:   11. Django Ecommerce Website/ecommerce_website/static/js/main.js 	modified:   11. Django Ecommerce Website/ecommerce_website/store/__pycache__/admin.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/store/__pycache__/models.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/store/__pycache__/urls.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/store/__pycache__/views.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/store/admin.py 	new file:   11. Django Ecommerce Website/ecommerce_website/store/migrations/0001_initial.py 	new file:   11. Django Ecommerce Website/ecommerce_website/store/migrations/0002_product_is_new.py 	new file:   11. Django Ecommerce Website/ecommerce_website/store/migrations/0003_alter_product_is_new.py 	new file:   11. Django Ecommerce Website/ecommerce_website/store/migrations/__pycache__/0001_initial.cpython-311.pyc 	new file:   11. Django Ecommerce Website/ecommerce_website/store/migrations/__pycache__/0002_product_is_new.cpython-311.pyc 	new file: 

--- a/11. Django Ecommerce Website/ecommerce_website/static/css/main.css
+++ b/11. Django Ecommerce Website/ecommerce_website/static/css/main.css
@@ -56,6 +56,10 @@
   .navbar-links li {
     padding: .8em;
   }
+
+  .navbar-links .profile {
+    color: red;
+  }
   
   .navbar-links li:hover, .cart:hover {
     background-color: orange;
@@ -397,7 +401,7 @@
     padding: .5em;
   }
   
-  .card-text p strike {
+  .card-text p del {
     color: red;
   }
   
@@ -450,7 +454,8 @@
     background-color: red;
     color: white; 
     padding: 0.4em;
-    border-radius: 0 5px 0 10px;
+    border-radius: 0 5px 0 20px;
+    font-size: .9rem;
   }
   
   .new-product {
@@ -550,7 +555,8 @@
     .footer-column ul {
       display: flex;
       flex-wrap: wrap;
-      justify-content: space-between;
+      justify-content: flex-start;
+      gap: 2em;
     }
   
     .footer-end {
