--- a/11. Django Ecommerce Website/ecommerce_website/store/templates/footer.html
+++ b/11. Django Ecommerce Website/ecommerce_website/store/templates/footer.html
@@ -36,7 +36,7 @@
                 <li><a href="#"><span>&gt;</span> sqcodeske</a></li>
                 <li><a href="#"><span>&gt;</span> +254 700110011</a></li>
                 <li><a href="#"><span>&gt;</span> sqcodes@ecom.com</a></li>
-                <li><a href="#"><span>&gt;</span> sqcodeske</a></li>
+                <li><a href="#"><span>&gt;</span> sqcodes.ke</a></li>
             </ul>
         </div>
     </div>
@@ -44,7 +44,7 @@
     <hr>
 
     <div class="footer-end">
-        <p>&copy;Sqcodes | <span id="current-year"></span>. All Rights Reserved.</p>
+        <p>&copy;Sqcodes | <span id="current-year">2023</span>. All Rights Reserved.</p>
     </div>
 </div> <!-- Footer end-->
 
