--- a/11. Django Ecommerce Website/ecommerce_website/store/templates/base.html
+++ b/11. Django Ecommerce Website/ecommerce_website/store/templates/base.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock title %}</title>
     <link rel="stylesheet" href="{% static 'css/main.css' %}"> 
+    <link rel="stylesheet" href="{% static 'css/product.css' %}"> 
 </head>
 <body>
     
     <div class="body-container">
         {% include 'navbar.html' %}
         <div class="container">
-            {% include 'hero.html' %}
+            
             {% block content %}
         
             {% endblock content %}
