modified:   11. Django Ecommerce Website/ecommerce_website/db.sqlite3 	new file:   11. Django Ecommerce Website/ecommerce_website/media/uploads/products/sandals-587185_1280.jpg 	modified:   11. Django Ecommerce Website/ecommerce_website/static/css/product.css 	modified:   11. Django Ecommerce Website/ecommerce_website/static/js/main.js 	modified:   11. Django Ecommerce Website/ecommerce_website/store/__pycache__/models.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/store/__pycache__/urls.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/store/__pycache__/views.cpython-311.pyc 	new file:   11. Django Ecommerce Website/ecommerce_website/store/migrations/0004_product_percentage_discount.py 	new file:   11. Django Ecommerce Website/ecommerce_website/store/migrations/__pycache__/0004_product_percentage_discount.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/store/models.py 	modified:   11. Django Ecommerce Website/ecommerce_website/store/templates/login.html 	modified:   11. Django Ecommerce Website/ecommerce_website/store/templates/navbar.html 	modified:   11. Django Ecommerce Website/ecommerce_website/store/templates/product-card.html 	modified:   11. Django Ecommerce Website/ecommerce_website/store/templates/product.html 	new file:   11. Django Ecommerce Website/ecommerce_website/store/templates/register.html 	modified:   11. Django Ecommerce Website/ecommerce_website/store/urls.py 	modified:   11. Django Ecommerce Website/ecommerce_website/store/views.py

--- a/11. Django Ecommerce Website/ecommerce_website/store/templates/login.html
+++ b/11. Django Ecommerce Website/ecommerce_website/store/templates/login.html
@@ -13,7 +13,7 @@
                 <input type="text" placeholder="Enter Email" name="username" id="username" autocomplete="username" required>
                 
                 <label for="password">Password</label>
-                <input type="password" placeholder="Enter Password" name="password" id="password" required>
+                <input type="password" placeholder="Enter Password" name="password" required>
 
                 <button type="submit">Login</button>
                 <label>  
