--- a/11. Django Ecommerce Website/ecommerce_website/store/templates/navbar.html
+++ b/11. Django Ecommerce Website/ecommerce_website/store/templates/navbar.html
@@ -39,39 +39,6 @@
 </nav>
 
 {% include 'login.html' %}
+{% include 'register.html' %}
 
 
-<!-- Register form -->
-<div id="signup-form" class="modal">
-    <div class="form-container modal-content animate">
-        <form action="" method="post">
-            <div class="img">
-                <span id="close-signup-form" class="close">&times;</span>
-                <img src="/static/images/avatar.png" alt="avatar" class="avatar" width="20%"> 
-            </div>
-            <div class="login-container">
-                <label for="fname">First Name</label>
-                <input type="text" placeholder="Enter First Name" name="fname" id="fname" autocomplete="fname" required>
-                
-                <label for="lname">Last Name</label>
-                <input type="text" placeholder="Enter Last Name" name="lname" id="lname" autocomplete="lname" required>
-                
-                <label for="email">Email</label>
-                <input type="email" placeholder="Enter Email" name="email" id="email" autocomplete="email" required>
-
-                <label for="password">Password</label>
-                <input type="password" placeholder="Enter Password" name="password" id="password" required>
-
-                <label for="password">Repeat Password</label>
-                <input type="password" placeholder="Enter Password" name="password" id="password" required>
-
-                <button type="submit">Register</button>
-                
-            </div>
-            <div class="login-container">
-                <button type="button" class="cancelbtn" id="cancel-signup-button">Cancel</button>
-                <span class="password">Already have accout? <a href="#">Login.</a></span>
-            </div>
-        </form>
-    </div>
-</div>
