--- a/11. Django Ecommerce Website/ecommerce_website/store/templates/product.html
+++ b/11. Django Ecommerce Website/ecommerce_website/store/templates/product.html
@@ -15,13 +15,13 @@
     <div class="product-container">
         <div class="product-image-card">
             <div class="profile-image">
-                <img src="/static/images/childrens-shoes1.jpg" alt="Product" width="100%">
+                <img src="{{ product.image.url }}" alt="Product" width="100%">
             </div>
             <div class="product-images">
-                <div class="image"><img src="/static/images/childrens-shoes1.jpg" alt="Product" width="100%"></div>
-                <div class="image"><img src="/static/images/childrens-shoes1.jpg" alt="Product" width="100%"></div>
-                <div class="image"><img src="/static/images/childrens-shoes1.jpg" alt="Product" width="100%"></div>
-                <div class="image"><img src="/static/images/childrens-shoes1.jpg" alt="Product" width="100%"></div>
+                <div class="image"><img src="{{ product.image.url }}" alt="Product" width="100%"></div>
+                <div class="image"><img src="{{ product.image.url }}" alt="Product" width="100%"></div>
+                <div class="image"><img src="{{ product.image.url }}" alt="Product" width="100%"></div>
+                <div class="image"><img src="{{ product.image.url }}" alt="Product" width="100%"></div>
             </div>
         </div>
         <div class="product-information">
